Add summaries for period of 2024-03-18 to 2024-03-22; fetch latest personal issues

--- a/personal-issues/1507.md
+++ b/personal-issues/1507.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-03-18
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,7 +8,33 @@ projects:
 milestone:	
 number:	1507
 --
+## Personal projects
+
+### General
+
+- [x] ~5 minutes: Make an experimental issue (#1508) for personal projects priorities over the week
+
+### Devops stuff
+
+- [x] ~5 minutes: Do some stock-taking and planning related to MediaWiki upgrade
+
+### Learning stuff
+
+- [x] ~5 minutes: Review my LessWrong dialogue conversation and make a few edits per the agreed-upon guidelines
+
+### Calculus subwiki
+
+- [x] ~15 minutes: Refresh my memory of some stuff on calculus subwiki; do some general research/reading in preparation for a strategy plan
+
 ## Personal chores
 
 - [x] ~3 minutes: Make a few more tweaks to a form draft
 - [x] ~20 minutes: Put together a job history SQL file as a canonical reference for job updates
+- [x] ~9 minutes: Add day summaries and week summary; update preamble with latest timezone information https://github.com/vipulnaik/daily-updates/commit/3c17184f7596fa1de3a9670afd9407807cc6d873
+- [x] ~1 hour 30 minutes: Pick up Amazon stuff https://github.com/vipulnaik/diet-exercise-health/commit/4ea6c9b4a7397b293a8624fd8098004788f6ad45
+- [x] ~10 minutes: Add some more guidance and cautionary notes related to travel, drawing on recent experience
+- [x] ~6 minutes: Reinstate food purchase verification queries https://github.com/vipulnaik/diet-exercise-health/commit/4138df6a38f1389083c95ec8ef9071395ce4a8d8
+
+## Other activities
+
+- [x] ~20 minutes: Continue watching videos
