Add summaries for period of 2024-03-23 to 2024-03-24; add week summary; fetch latest personal issues

--- a/personal-issues/1513.md
+++ b/personal-issues/1513.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-03-23
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,10 @@ projects:
 milestone:	
 number:	1513
 --
+## Personal chores
+
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/5e555945360c9a101c9a40dd294126134ed49f42
+
 ## House chores
 
 - [x] ~7 minutes: Deal with my carbon monoxide alarm battery issues
@@ -15,3 +19,4 @@ number:	1513
 ## Other activities
 
 - [x] ~20 minutes: Record some notes related to a recent conversation
+- [x] ~5 minutes: Continue watching videos
