--- a/personal-issues/1515.md
+++ b/personal-issues/1515.md
@@ -1,15 +1,13 @@
-title:	Vipul personal projects priorities | week of 2024-03-18 to 2024-03-24
-state:	CLOSED
+title:	Vipul personal projects priorities | week of 2024-03-25 to 2024-03-31
+state:	OPEN
 author:	vipulnaik
 labels:	
-comments:	1
+comments:	0
 assignees:	vipulnaik
 projects:	
 milestone:	
-number:	1508
+number:	1515
 --
-This is an experimental issue structure that I might make in specific weeks where I have a lot of personal projects items with mutual dependencies, and I want to make some progress on them. I'll still make the usual issues for daily updates, but will also check boxes here as I finish the relevant items. This list may not capture everything I end up doing under personal projects.
-
 ## Devops stuff (this is a quasi-blocker to subwiki stuff)
 
 - [ ] Upgrade MediaWiki for calculus subwiki (to 1.35) and get the Widgets extension back up and running; this will fix the breaking of the widget on existing pages, and make me more comfortable editing and expanding those pages
@@ -35,5 +33,3 @@ Most likely it'll be:
 
 * 1 to 2 MediaWiki upgrades
 * 1 to 2 of the three tasks that are: the two subwiki editing tasks and the Wikipedia page creation work; which ones I pick will depend on my mood; how many I pick will also depend on my total time available
-
-
