--- a/personal-issues/1523.md
+++ b/personal-issues/1523.md
@@ -1,12 +1,12 @@
-title:	Vipul personal projects priorities | week of 2024-03-25 to 2024-03-31
-state:	CLOSED
+title:	Vipul personal projects priorities | week of 2024-04-01 to 2024-04-07
+state:	OPEN
 author:	vipulnaik
 labels:	
-comments:	1
+comments:	0
 assignees:	vipulnaik
 projects:	
 milestone:	
-number:	1515
+number:	1523
 --
 ## Devops stuff (this is a quasi-blocker to subwiki stuff)
 
