Add summaries for period of 2024-04-05 to 2024-04-07; add week summary; fetch latest personal issues

--- a/personal-issues/1515.md
+++ b/personal-issues/1515.md
@@ -27,7 +27,7 @@ number:	1515
 
 ## What I will likely be able to do
 
-This week is still busy with residual post-trip tasks as well as some meetings with people that have landed on this week as I couldn't do them easily while in India. I also want to budget time for catching up on work. So, I don't realistically expect to do everything in my personal projects priorities.
+This week is still busy with residual post-trip tasks, so my time on personal projects will be reduced.
 
 Most likely it'll be:
 
