--- a/personal-issues/1531.md
+++ b/personal-issues/1531.md
@@ -1,17 +1,18 @@
-title:	Vipul personal projects priorities | week of 2024-04-01 to 2024-04-07
-state:	CLOSED
+title:	Vipul personal projects priorities | week of 2024-04-08 to 2024-04-14
+state:	OPEN
 author:	vipulnaik
 labels:	
 comments:	0
 assignees:	vipulnaik
 projects:	
 milestone:	
-number:	1523
+number:	1531
 --
 ## Devops stuff (this is a quasi-blocker to subwiki stuff)
 
-- [x] Upgrade MediaWiki for calculus subwiki (to 1.35) and ~~get the Widgets extension back up and running~~ <-- I couldn't figure that piece out but have documented the current state of things
-- [x] (PARTIAL PROGRESS) Upgrade MediaWiki for learning subwiki (to 1.35) and make sure its status is clean
+- [ ] Upgrade MediaWiki for learning subwiki (to 1.35) and make sure its status is clean
+- [ ] Get market subwiki ready for MediaWiki upgrade
+- [ ] Get mech subwiki ready for MediaWiki upgrade
 
 ## Subwiki stuff
 
@@ -29,5 +30,6 @@ number:	1523
 
 Most likely it'll be:
 
-* 1 to 2 MediaWiki upgrades
+* The MediaWiki upgrade for learning
+* 1 or 2 of the get-ready-for-MediaWiki upgrade tasks
 * 1 to 2 of the three tasks that are: the two subwiki editing tasks and the Wikipedia page creation work; which ones I pick will depend on my mood; how many I pick will also depend on my total time available
