--- a/personal-issues/1528.md
+++ b/personal-issues/1528.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2024-04-05
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -18,11 +18,14 @@ number:	1528
 
 - [x] ~3 minutes: Record aftereffects and followup of dental cleaning https://github.com/vipulnaik/diet-exercise-health/commit/ac6dd06c245b40153555a3fadb63821d3bab0fc1
 - [x] ~7 minutes: Try to resolve a login issue
+- [x] ~8 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/962835ab9474b53c5148a13f7f5bfa53928b254f
 
 ## House chores
 
 - [x] ~2 minutes: Do monthly checks for smoke detector and CO alarm
+
 ## Other activities
 
 - [x] ~10 minutes: Have a conversation
 - [x] ~5 minutes: Make suggestions to a friend to address an issue
+- [x] ~1 hour 15 minutes: Continue watching videos
