Add summaries for period of 2024-04-08 to 2024-04-12; fetch latest personal issues

--- a/personal-issues/1531.md
+++ b/personal-issues/1531.md
@@ -10,7 +10,7 @@ number:	1531
 --
 ## Devops stuff (this is a quasi-blocker to subwiki stuff)
 
-- [ ] Upgrade MediaWiki for learning subwiki (to 1.35) and make sure its status is clean
+- [x] Upgrade MediaWiki for learning subwiki (to 1.35) and make sure its status is clean
 - [ ] Get market subwiki ready for MediaWiki upgrade
 - [ ] Get mech subwiki ready for MediaWiki upgrade
 
