Add summaries for period of 2024-04-13 to 2024-04-14; add week summary; fetch latest personal issues

--- a/personal-issues/1531.md
+++ b/personal-issues/1531.md
@@ -1,5 +1,5 @@
 title:	Vipul personal projects priorities | week of 2024-04-08 to 2024-04-14
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -11,14 +11,13 @@ number:	1531
 ## Devops stuff (this is a quasi-blocker to subwiki stuff)
 
 - [x] Upgrade MediaWiki for learning subwiki (to 1.35) and make sure its status is clean
-- [ ] Get market subwiki ready for MediaWiki upgrade
+- [x] (PARTIAL PROGRESS) Get market subwiki ready for MediaWiki upgrade
 - [ ] Get mech subwiki ready for MediaWiki upgrade
 
 ## Subwiki stuff
 
-- [ ] Work on calculus subwiki (there is no fixed agenda, but I have the idea of updating some pages, such as "point of local extremum implies critical point", to match the standard set by other pages such as "product rule for differentiation)
-  - This is quasi-blocked by the calculus subwiki upgrade.
-- [ ] Work on learning subwiki (I have a long list at https://learning.subwiki.org/wiki/User:Vipul, as well as some nascent ideas around sub-directions within those pages)
+- [x] (PARTIAL PROGRESS) Work on calculus subwiki (there is no fixed agenda, but I have the idea of updating some pages, such as "point of local extremum implies critical point", to match the standard set by other pages such as "product rule for differentiation)
+- [ ] (IDEATION but no substantive progress) Work on learning subwiki (I have a long list at https://learning.subwiki.org/wiki/User:Vipul, as well as some nascent ideas around sub-directions within those pages)
   - This is quasi-blocked by the learning subwiki upgrade.
 
 ## Wikipedia stuff
@@ -26,10 +25,7 @@ number:	1531
 - [ ] Work on the "Streamlined Filing Compliance Procedures" page from https://github.com/vipulnaik/working-drafts/blob/master/wikipedia/pages-to-create.md and potentially work on some of the other tax-related pages
   - This is not blocked on anything per se, but I'm likely to prioritize the devops stuff over it; I'm fine if this gets pushed to next week due to subwiki stuff taking precedence!
 
-## What I will likely be able to do
+## Timelines wiki stuff (not originally planned)
 
-Most likely it'll be:
-
-* The MediaWiki upgrade for learning
-* 1 or 2 of the get-ready-for-MediaWiki upgrade tasks
-* 1 to 2 of the three tasks that are: the two subwiki editing tasks and the Wikipedia page creation work; which ones I pick will depend on my mood; how many I pick will also depend on my total time available
+- [x] Update timeline of BART
+- [ ] (PARTIAL PROGRESS) Update timeline of AI safety
