--- a/personal-issues/1537.md
+++ b/personal-issues/1537.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-04-13
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -13,7 +13,13 @@ number:	1537
 ### Timelines wiki
 
 - [x] ~15 minutes: Expand timeline of BART https://github.com/vipulnaik/working-drafts/commit/4f6b82c0a4467a0c43c796c9990eee3a03b2490f
-- [x] ~15 minutes: Continue expanding timeline of AI safety https://github.com/vipulnaik/working-drafts/commit/fd1dbc4cfa8d110faf0e0f2cee3bffb5ec9f1467 
+- [x] ~15 minutes: Continue expanding timeline of AI safety https://github.com/vipulnaik/working-drafts/commit/fd1dbc4cfa8d110faf0e0f2cee3bffb5ec9f1467
+- [x] ~8 minutes: Fix warnings in timeline of BART https://github.com/vipulnaik/working-drafts/commit/03bccbbab9d26f3bd0dbf90ce8f8976c860e1605
+- [x] ~8 minutes: Fix warnings in timeline of AI safety https://github.com/vipulnaik/working-drafts/commit/166f3533674cb73c44fa18d04645672e1395ab7d
+
+### BART
+
+- [x] ~25 minutes: Separate insertions into separate SQL files by year https://github.com/vipulnaik/bart/commit/502d2c32327b50f969765a2a7d4f258b6f1bd28a; add a TSV variant going forward and ingest the 2024 data using the TSV variant https://github.com/vipulnaik/bart/commit/116d88f562ca4854c559730eb466120623b33931
 
 ## Personal finances, income and taxes
 
@@ -24,7 +30,17 @@ number:	1537
 - [x] ~18 minutes: Do monthly account recovery fire drill
 - [x] ~15 minutes: Do monthly emergency contact fire drill
 - [x] ~8 minutes: Tweak a few settings highlighted during the account recovery fire drill
+- [x] ~10 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/973f8c186990e69aaf64f6dfaee36f359780536c
+- [x] ~5 minutes: Place an online order
+- [x] ~5 minutes: Deal with a few stains
+- [x] ~10 minutes: Personal portion of clearing out old screenshots 
+
+## House chores
+
+- [x] ~2 minutes: Follow up on a matter
+- [x] ~10 minutes: Prepare my rent check for mailing 
 
 ## Other activities
 
 - [x] ~4 minutes: Download, install, and log in to an app
+- [x] ~20 minutes: Continue watching videos
