Add summaries for period of 2024-04-19 to 2024-04-21; add weekend summary; fetch latest personal issues

--- a/personal-issues/1544.md
+++ b/personal-issues/1544.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2024-04-19
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,28 @@ projects:
 milestone:	
 number:	1544
 --
+## Personal projects
+
+### Devops stuff
+
+- [x] ~15 minutes: Look into semantic issues on groupprops
+- [x] ~3 minutes: Clear out a deprecated setting
+
+### Subwiki stuff
+
+- [x] ~5 minutes: Continue digging into cellbio stuff
+
 ## Personal chores
 
 - [x] ~2 minutes: Recall a couple of passwords
+- [x] ~8 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/8f3b2f53326dc9719f4114cff0f00683d34e5130
+- [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/ee2defca85cafa914e8fffc913f60b72c61b4355
+
+## House chores
+
+- [x] ~5 minutes: Deal with a mail misdelivery
+- [x] ~2 minutes: Coordinate on a matter
+
+## Other activities
+
+- [x] ~20 minutes: Continue watching videos
