Add summaries for period of 2024-04-22 to 2024-04-26; fetch latest personal issues

--- a/personal-issues/1539.md
+++ b/personal-issues/1539.md
@@ -1,8 +1,8 @@
 title:	Vipul personal projects priorities | week of 2024-04-15 to 2024-04-21
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
-comments:	0
+comments:	1
 assignees:	vipulnaik
 projects:	
 milestone:	
@@ -10,14 +10,19 @@ number:	1539
 --
 ## Devops stuff
 
-- [ ] Finish getting market subwiki ready for MediaWiki upgrade
+- [x] Finish getting market subwiki ready for MediaWiki upgrade
 - [ ] Get mech subwiki ready for MediaWiki upgrade
+
+Not originally planned:
+
+- [ ] (PARTIAL PROGRESS): Get groupprops subwiki ready for MediaWiki upgrade
+  - I decided to give higher priority to groupprops over mech after spending some time debugging a few issues for groupprops
 
 ## Subwiki stuff
 
-- [ ] Work on calculus subwiki (there is no fixed agenda, but I have the idea of updating some pages, such as "point of local extremum implies critical point", to match the standard set by other pages such as "product rule for differentiation)
+- [x] Work on calculus subwiki (there is no fixed agenda, but I have the idea of updating some pages, such as "point of local extremum implies critical point", to match the standard set by other pages such as "product rule for differentiation)
 - [ ] Work on learning subwiki (I have a long list at https://learning.subwiki.org/wiki/User:Vipul, as well as some nascent ideas around sub-directions within those pages)
-- [ ] Work on cellbio subwiki (flesh out the outer mitochondrial membrane and inner mitochondrial membrane pages more)
+- [x] Work on cellbio subwiki (flesh out the outer mitochondrial membrane and inner mitochondrial membrane pages more)
 
 ## Wikipedia stuff
 
