Add summaries for period of 2024-04-27 to 2024-04-28; add weekend summary; fetch latest personal issues; fix weekday issue numbers

--- a/personal-issues/1548.md
+++ b/personal-issues/1548.md
@@ -1,17 +1,17 @@
 title:	Vipul personal projects priorities | week of 2024-04-22 to 2024-04-28
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
-assignees:	
+assignees:	vipulnaik
 projects:	
 milestone:	
 number:	1548
 --
 ## Devops stuff
 
-- [ ] Finish getting groupprops subwiki ready for MediaWiki upgrade
-- [ ] Get mech subwiki ready for MediaWiki upgrade
+- [x] Finish getting groupprops subwiki ready for MediaWiki upgrade
+- [x] Get mech subwiki ready for MediaWiki upgrade
 
 ## Subwiki stuff
 
@@ -20,8 +20,9 @@ number:	1548
 
 ## Wikipedia stuff
 
-- [ ] Work on the "Streamlined Filing Compliance Procedures" page from https://github.com/vipulnaik/working-drafts/blob/master/wikipedia/pages-to-create.md and potentially work on some of the other tax-related pages
+- [ ] (PARTIAL PROGRESS) Work on the "Streamlined Filing Compliance Procedures" page from https://github.com/vipulnaik/working-drafts/blob/master/wikipedia/pages-to-create.md and potentially work on some of the other tax-related pages
   - This is not blocked on anything per se, but I'm likely to prioritize the devops stuff over it; I'm fine if this gets pushed to next week due to subwiki stuff taking precedence!
+  - (PROGRESS UPDATE) I did not quite start work on this, but I started reading related material and started drafting the FinCEN Form 114 page.
 
 ## Timelines wiki stuff
 
