--- a/personal-issues/1555.md
+++ b/personal-issues/1555.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-04-29
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,6 +10,11 @@ number:	1555
 --
 ## Personal chores
 
-- [x] ~3 minutes: Do some health recording https://github.com/vipulnaik/diet-exercise-health/commit/33a037446943fa1fdd55596b63dfa2f319a26832
+- [x] ~40 minutes: Do some investigation for abdominal pain and associated health recording https://github.com/vipulnaik/diet-exercise-health/commit/33a037446943fa1fdd55596b63dfa2f319a26832 https://github.com/vipulnaik/diet-exercise-health/commit/c52992347d7209821f82aeccabed8a01d48b0bac https://github.com/vipulnaik/diet-exercise-health/commit/593b14c3549e108c8016da643ccdeb2254f22edb
 - [x] ~20 minutes: Do some research into oxalates and the implications for spinach versus kale; later, add oxalate calculations https://github.com/vipulnaik/diet-exercise-health/commit/dde39d18923994af9de60ad939f33895aadd7833
 - [x] ~2 hours: Regular meal prep
+- [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/b4bfb9e5d0c4196f3160d54b137d86ab02e3e4f6
+
+## Other activities
+
+- [x] ~50 minutes: Continue watching videos
