Add summaries for period of 2024-05-04 to 2024-05-05; add week summary and month summary; fetch latest personal issues

--- a/personal-issues/1561.md
+++ b/personal-issues/1561.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-05-04
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,7 +8,41 @@ projects:
 milestone:	
 number:	1561
 --
+## Personal projects
+
+### Org Watch
+
+- [x] ~5 minutes: File riceissa/aiwatch#152 after reviewing the list of failing urls in the last run of the wayback archiver
+
+### Contract work for Vipul Naik
+
+- [x] ~10 minutes: Add April 2024 payments due to @riceissa https://github.com/vipulnaik/contractwork/commit/b0a835fc0a2c9d6303e347a9f7dc3b470c52b50a
+
+### Devops stuff
+
+- [x] ~2 minutes: Do monthly backups
+- [x] ~1 hour 20 minutes: Work on MediaWiki upgrades
+
 ## Personal finances, income and taxes
 
-- [x] ~7 minutes: Make a few end-of-month updates and related changes https://github.com/vipulnaik/personal-finances/commit/c54a56219ba2b5ccf9b57e71ff4610b6054c6d68
+- [x] ~9 minutes: Make a few end-of-month updates and related changes https://github.com/vipulnaik/personal-finances/commit/c54a56219ba2b5ccf9b57e71ff4610b6054c6d68 https://github.com/vipulnaik/personal-finances/commit/900c385ac91b1d863993cd73bae47f7049a20460 https://github.com/vipulnaik/personal-finances/commit/824cde3236398def1e1afd8cfd26a705339017de
 - [x] ~2 minutes: Take care of some money transfers https://github.com/vipulnaik/personal-finances/commit/465258c491b7450f3ae1b6b217b553aa7e03ebae
+
+## Personal chores
+
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/7b3f79aee3c2f3edd8e07d3c0b14756bcfe5d6a7
+- [x] ~15 minutes: Rinse used-up condiment bottles, used-up dish soap bottles, and used-up olive oil glass bottles
+- [x] ~15 minutes: Adjust for waste in nutrition calculation https://github.com/vipulnaik/diet-exercise-health/commit/a056453a2359d79cb69367b592fc4010658f4a27 and make a few related changes https://github.com/vipulnaik/diet-exercise-health/commit/7c0c182c3e2f27d0063d3cce8b21692d3ec5254d https://github.com/vipulnaik/diet-exercise-health/commit/d53b6c6dec51564795683348e1433b30d6279b8e
+- [x] ~10 minutes: Add nutritional information for two more food items https://github.com/vipulnaik/diet-exercise-health/commit/582c008e12ff0fba7f4754bbe2a9eeca6cf6bc2b
+- [x] ~3 minutes: Start toilet cleaning
+- [x] ~12 minutes: Execute on the periodic vinegar cleanse of my stainless steel pot
+- [x] ~2 minutes: Dispose of my lavash bread and record the disposal https://github.com/vipulnaik/diet-exercise-health/commit/c6e75bb60eeff59021b26cb403d6f5c5e7ebbc1e
+
+## House chores
+
+- [x] ~9 minutes: Coordinate on some house items
+
+## Other activities
+
+- [x] ~4 minutes: Briefly try a few Korean vocabulary quiz questions; score of 7/10
+- [x] ~30 minutes: Continue watching videos
