--- a/personal-issues/1563.md
+++ b/personal-issues/1563.md
@@ -1,12 +1,12 @@
-title:	Vipul personal projects priorities | week of 2024-04-29 to 2024-05-05
-state:	CLOSED
+title:	Vipul personal projects priorities | week of 2024-05-06 to 2024-05-12
+state:	OPEN
 author:	vipulnaik
 labels:	
-comments:	1
+comments:	0
 assignees:	vipulnaik
 projects:	
 milestone:	
-number:	1556
+number:	1563
 --
 ## Wikipedia stuff
 
@@ -15,8 +15,6 @@ number:	1556
 
 ## Devops stuff
 
-- [x] Get topospaces subwiki ready for MediaWiki upgrade
-- [x] Get machinelearning subwiki ready for MediaWiki upgrade
 - [ ] Get demography subwiki ready for MediaWiki upgrade
 - [ ] Get devec subwiki ready for MediaWiki upgrade
 
