Add summaries for period of 2024-05-10 to 2024-05-12; fetch latest personal issues

--- a/personal-issues/1563.md
+++ b/personal-issues/1563.md
@@ -1,8 +1,8 @@
 title:	Vipul personal projects priorities | week of 2024-05-06 to 2024-05-12
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
-comments:	0
+comments:	1
 assignees:	vipulnaik
 projects:	
 milestone:	
@@ -10,7 +10,8 @@ number:	1563
 --
 ## Wikipedia stuff
 
-- [ ] Work on the "FinCEN Form 114" page draft already started
+- [x] Work on the "FinCEN Form 114" page draft already started
+  - This has now been published live, though I still have a few more edits I plan to make
 - [ ] Work on the "Streamlined Filing Compliance Procedures" page from https://github.com/vipulnaik/working-drafts/blob/master/wikipedia/pages-to-create.md and potentially work on some of the other tax-related pages
 
 ## Devops stuff
