--- a/personal-issues/1568.md
+++ b/personal-issues/1568.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2024-05-10
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,22 @@ projects:
 milestone:	
 number:	1568
 --
+## Personal projects
+
+### Timelines wiki (Future Fund)
+
+- [x] ~2 minutes: Continue working through some stuff
+
 ## Personal chores
 
 - [x] ~7 minutes: Tweak disk cleanup script and record updated disk usage
+- [x] ~8 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/6c4342d887ea7e2214a9e8651ff7dbfd27ce18e6
+- [x] ~40 minutes: Potatoes prep (with kale, peas, broccoli, and tomatoes) excluding 15 minutes of time multiplexed with watching videos
+- [x] ~5 minutes: Look into making a few purchases
+- [x] ~23 minutes: Regular laundry (larger load than usual)
+- [x] ~13 minutes: Rice prep
+- [x] ~10 minutes: File away prescription + documents and update notes related to abdominal pain https://github.com/vipulnaik/diet-exercise-health/commit/9a201a97e95a93e712de881669bbbfcef9209938
+
+## Other activities
+
+- [x] ~25 minutes: Continue watching videos
