Add summaries for period of 2024-05-18 to 2024-05-19; add week summary; fetch latest personal issues

--- a/personal-issues/1577.md
+++ b/personal-issues/1577.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-05-18
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,12 @@ projects:
 milestone:	
 number:	1577
 --
+## Personal projects
+
+### Timelines wiki
+
+- [x] ~10 minutes: Continue expanding timeline of AI safety https://github.com/vipulnaik/working-drafts/commit/ce8d90030adcd7ec3e8edb7c5a2a6aafd8e7cec2 https://timelines.issarice.com/index.php?title=Timeline_of_AI_safety&type=revision&diff=79858&oldid=79846
+
 ## Personal chores
 
 - [x] ~20 minutes: Do some investigation into phone battery health and record my findings
@@ -15,3 +21,16 @@ number:	1577
 - [x] ~1 hour 30 minutes: Long-overdue bathtub scrubbing (part 1)
 - [x] ~3 minutes: Make a few tweaks to the month change checklist
 - [x] ~3 minutes: Update my hours targets https://github.com/vipulnaik/daily-updates/commit/cd92e03feb56733480589b7b8f917546bca70441 https://github.com/vipulnaik/daily-updates/commit/7d102a6e565bf06cddffa55edbed15d3386da39f
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/8a8b667423e87afc6f746039623e57e653d7eb39
+- [x] ~9 minutes: Take out trash recycling; pack and take out glass and plastic recycling
+- [x] ~7 minutes: Finish various device-related month change checklist items
+- [x] ~3 minutes: Record skipping of various month change checklist items
+- [x] ~15 minutes: Heavy laundry (smaller load than usual, but with additional reconfiguration work)
+
+## House chores
+
+- [x] ~2 minutes: Do some supererogatory cleaning of surfaces for the washer and dryer while on my laundry trip
+
+## Other activities
+
+- [x] ~10 minutes: Continue watching videos
