--- a/personal-issues/1580.md
+++ b/personal-issues/1580.md
@@ -1,31 +1,28 @@
-title:	Vipul personal projects priorities | week of 2024-05-13 to 2024-05-19
-state:	CLOSED
+title:	Vipul personal projects priorities | week of 2024-05-20 to 2024-05-26
+state:	OPEN
 author:	vipulnaik
 labels:	
-comments:	1
+comments:	0
 assignees:	vipulnaik
 projects:	
 milestone:	
-number:	1571
+number:	1580
 --
+Due to some other priorities, my time on personal projects may be a bit lower this week. Nonetheless, I want to keep the full list of possibilities, from which I can choose based on what best fits my mood and time availability.
+
 ## Wikipedia stuff
 
-- [x] Expand the FinCEN Form 114 Wikipedia page slightly
 - [ ] Work on the Form 8938 Wikipedia page
 - [ ] Work on the Streamlined Filing Compliance Procedures Wikipedia page
 
 ## Devops stuff
 
+- [ ] Continue getting devec subwiki ready for MediaWiki upgrade
 - [ ] Get demography subwiki ready for MediaWiki upgrade
-- [ ] IN PROGRESS: Get devec subwiki ready for MediaWiki upgrade
-
-Not originally planned for this week:
-
-- [x] Make dark mode fixes (vipulnaik/devops#2)
 
 ## Timelines wiki stuff
 
-- [x] (not completed, but reached a logical point of expansion) Continue updating timeline of AI safety
+- [ ] Continue updating timeline of AI safety
 
 ## Donations list website (DLW) stuff
 
