Add summaries for period of 2024-05-20 to 2024-05-25; fetch latest personal issues

--- a/personal-issues/1579.md
+++ b/personal-issues/1579.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-05-20
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -11,3 +11,17 @@ number:	1579
 ## Personal chores
 
 - [x] ~8 minutes: Couscous prep
+- [x] ~5 minutes: Add weekend summary and week summary https://github.com/vipulnaik/daily-updates/commit/3c4ed2d8fb34a004f85070e17607507d523a186b
+- [x] ~7 minutes: Sort accumulated mail and take out paper recycling
+- [x] ~27 minutes: Regular laundry (with additional pickup trip and additional initial trip where the washer wasn't available)
+- [x] ~45 minutes: Potatoes prep (with kale, peas, broccoli, and tomatoes) (excluding 10 minutes multiplexed with watching videos)
+- [x] ~10 minutes: Continue travel research
+
+## House chores
+
+- [x] ~8 minutes: Record improved best practices around some stuff
+- [x] ~10 minutes: Coordinate on and prep for some stuff happening in the next few days
+
+## Other activities
+
+- [x] ~15 minutes: Watch videos
