Add summary for 2024-05-26; add week summary; fetch latest personal issues

--- a/personal-issues/1580.md
+++ b/personal-issues/1580.md
@@ -1,8 +1,8 @@
 title:	Vipul personal projects priorities | week of 2024-05-20 to 2024-05-26
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
-comments:	0
+comments:	1
 assignees:	vipulnaik
 projects:	
 milestone:	
