--- a/personal-issues/1586.md
+++ b/personal-issues/1586.md
@@ -1,5 +1,5 @@
 title:	Vipul Sunday checklist | 2024-05-26
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,20 @@ projects:
 milestone:	
 number:	1586
 --
+## Personal finances, income and taxes
+
+- [x] ~7 minutes: Add a few credit reports https://github.com/vipulnaik/personal-finances/commit/ca33d6906c0e35fa81cc0e5362860b1190bd84ac https://github.com/vipulnaik/personal-finances/commit/df8a56263f7d3a546457e9cac225b391b92fe52e
+
+## Personal chores
+
+- [x] ~12 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/7e309b6affed03aacefb75e8cc5c04df9ff0d454
+- [x] ~25 minutes: Do some general travel research
+- [x] ~2 minutes: Take out the trash
+- [x] ~22 minutes: Regular laundry
+- [x] ~5 minutes: Wash my hair brush 
+
 ## Other activities
 
-- [ ] ~10 minutes so far: Continue watching videos
+- [x] ~20 minutes: Continue watching videos
+- [x] ~20 minutes: Chat with parents
+- [x] ~15 minutes: Discuss and read up some stuff
