Add summary for 2024-06-02; add week summary; fix a time allocation for an earlier day; fetch latest personal issues

--- a/personal-issues/1590.md
+++ b/personal-issues/1590.md
@@ -8,12 +8,16 @@ projects:
 milestone:	
 number:	1590
 --
+## Personal projects
+
+- [x] ~2 minutes: Do monthly backups
+
 ## Personal chores
 
 - [x] ~9 minutes: Lentils prep (soaking was done overnight)
 - [x] ~15 minutes: Write up an initial version of a document for best practices around bowel disruption due to sleep and stress https://github.com/vipulnaik/diet-exercise-health/commit/b1b5c0f1685ead81ca1b2b939fe10a316eef3ddb
 - [x] ~3 minutes: Back up my browsing history
-- [x] ~7 minutes: Take care of various change-of-month tasks
+- [x] ~5 minutes: Take care of various change-of-month tasks
 
 ## House chores
 
