--- a/personal-issues/1593.md
+++ b/personal-issues/1593.md
@@ -1,5 +1,5 @@
 title:	Vipul Sunday checklist | 2024-06-02
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -11,11 +11,19 @@ number:	1593
 ## Personal chores
 
 - [x] ~13 minutes: Do general travel research and make related checklist improvements
+- [x] ~2 minutes: Record supplement updates https://github.com/vipulnaik/diet-exercise-health/commit/da9d9d698afae7d24e32d5eabce9e982252cb266
+- [x] ~4 minutes: Take a couple of blood pressure readings https://github.com/vipulnaik/diet-exercise-health/commit/68d1ca6042418c94a1d8b7f0a8c9be3bbbde3006
+- [x] ~13 minutes: Add summaries for week so far; add month summary https://github.com/vipulnaik/daily-updates/commit/2715ae4f7e119821b90d686836896d5cd02cbc56
+- [x] ~5 minutes: Investigate and document a temporary urine color change due to the Vitamin B supplementation https://github.com/vipulnaik/diet-exercise-health/commit/23777da9672cd9c12ce7594635e325c9bb956627
+- [x] ~4 minutes: Clear out my accumulated mail
+- [x] ~12 minutes: Do quick cleaning of refrigerator, some of the kitchen floor, and the toilet floor
 
 ## House chores
 
-- [x] ~3 minutes: Document some house stuff from yesterday
+- [x] ~17 minutes: Document some house stuff from yesterday; deal with some followup stuff
+- [x] ~4 minutes: Document what happened with mail for former resident
 
 ## Other activities
 
-- [ ] ~25 minutes so far: Continue watching Ninja Nerd videos
+- [x] ~30 minutes: Continue watching Ninja Nerd videos
+- [x] ~15 minutes: Chat with a friend intermittently
