--- a/personal-issues/1595.md
+++ b/personal-issues/1595.md
@@ -1,5 +1,5 @@
 title:	Vipul Wednesday checklist | 2024-06-05
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -11,3 +11,8 @@ number:	1595
 ## Personal finances, income and taxes
 
 - [x] ~3 minutes: Download a couple of statements and adjust a balance a little bit https://github.com/vipulnaik/personal-finances/commit/6b0a43c56e904830a77716367170541f38016a6f
+
+## Personal chores
+
+- [x] ~10 minutes: Continue improving travel-related checklists based on travel experience
+- [x] ~10 minutes: Get groceries from Whole Foods https://github.com/vipulnaik/diet-exercise-health/commit/e5dbc5d2751b33a24f4b0fdbf47205e21dd8107c (just the extra time spent making the trip while on the way back home)
