Add summaries for weekend of 2024-06-15 to 2024-06-16; add week summary; fetch latest personal issues

--- a/personal-issues/1606.md
+++ b/personal-issues/1606.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-06-15
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -13,3 +13,32 @@ number:	1606
 ### Contract work for Vipul Naik
 
 - [x] ~10 minutes: Add May 2024 payments due to @riceissa https://github.com/vipulnaik/contractwork/commit/b9e4db8b58967386bbfcb0b96f0e4c18599f0a8a
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/e024b23b8540383cbffe156f8f3ce93e80824448
+
+### Monthly checks
+
+- [x] ~5 minutes: Do various monthly checks
+
+## Personal finances, income and taxes
+
+- [x] ~2 minutes: Update contractwork balance to reflect @riceissa payments due update https://github.com/vipulnaik/personal-finances/commit/6f068f816279b37228c1a223c61dbdbeb1a0fa9a
+- [x] ~2 minutes: Take care of a financial action https://github.com/vipulnaik/personal-finances/commit/0852bd6d2a46dff56c8797cd70fcebec02113903
+
+## Personal chores
+
+- [x] ~9 minutes: Lentils prep (finish after soaking last night)
+- [x] ~20 minutes: Do monthly account recovery fire drill and make some related account updates in the process
+- [x] ~15 minutes: Do monthly emergency contact fire drill
+- [x] ~4 minutes: Go through various list recalls
+- [x] ~4 minutes: Personal portion of clearing out old screenshots
+- [x] ~1 hour 50 minutes: Execute on monthly password recall drill
+- [x] ~4 minutes: Do monthly two-factor recovery drill
+- [x] ~3 minutes: Do various other monthly checks
+- [x] ~4 minutes: Rinse out a stain from a dish towel
+- [x] ~15 minutes: Regular laundry (for once, a normal load!)
+- [x] ~35 minutes: Put together document on personal chores hours https://github.com/vipulnaik/daily-updates/commit/09ac849c92cbb43844191539ea84de26cd41841c
+
+## Other activities
+
+- [x] ~3 minutes: Get back in an email thread
+- [x] ~9 minutes: Continue watching Ninja Nerd videos
