--- a/personal-issues/1608.md
+++ b/personal-issues/1608.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-06-17
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,15 +8,24 @@ projects:
 milestone:	
 number:	1608
 --
+## Personal projects
+
+### Wikipedia editing
+
+- [x] ~40 minutes: Continue expanding a Wikipedia page draft https://github.com/vipulnaik/working-drafts/commits?since=2024-06-17&until=2024-06-17
+
 ## Personal finances, income and taxes
 
 - [x] ~12 minutes: Put together some data
+- [x] ~7 minutes: Do some streamlining work to help with tax data entry
 
 ## Personal chores
 
 - [x] ~13 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/4168eb353697e2735cd23e74f25ebed896299576
 - [x] ~3 minutes: Make a few improvements to food recording/verification https://github.com/vipulnaik/diet-exercise-health/commit/061e39e5922150dd3caedfeabaa7e9ecfff1f1be
+- [x] ~5 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/beccf5247937d9e85465172cef61b844e3b8b76d
+- [x] ~4 minutes: Do a couple of password recalls
 
 ## Other activities
 
-- [ ] ~5 minutes so far: Continue watching Ninja Nerd videos
+- [x] ~5 minutes: Continue watching Ninja Nerd videos
