Add summaries for period of 2024-06-21 to 2024-06-23; add week summary; fetch latest personal issues

--- a/personal-issues/1612.md
+++ b/personal-issues/1612.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2024-06-21
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,10 +8,35 @@ projects:
 milestone:	
 number:	1612
 --
+## Personal projects
+
+### Groupprops subwiki
+
+- [x] ~3 minutes: Reply to an email
+
+## Personal finances, income and taxes
+
+### India-side taxes
+
+- [x] ~2 hours: Work through some review and streamlining for India-side taxes
+
+### Other
+
+- [x] ~3 minutes: Update some notes related to credit history https://github.com/vipulnaik/personal-finances/commit/912c8b939d0e7690d5f268fb1f9c11352f8a7118
+- [x] ~3 minutes: Record income earned from survey participation; do research on how that income would be classified
+
 ## Personal chores
 
-- [ ] ~10 minutes so far: Continue cleanup work for trip packing checklist
+- [x] ~17 minutes: Continue cleanup work for trip packing checklist
+- [x] ~8 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/31fcc0a6aea834386237b4a1c04779eb74a5f940
+- [x] ~5 minutes: Continue work on vipulnaik/diet-exercise-health#7 https://github.com/vipulnaik/diet-exercise-health/commit/936bfb35a0d091601c10e6fd783ee6a937e233cd
+- [x] ~4 minutes: Take care of some laptop health checks
+- [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/0e611946722d1eaa7ed97d3dbeed1e8226fb4989
 
 ## Family and career planning
 
 - [x] ~5 minutes: Put together a document
+
+## Other activities
+
+- [x] ~20 minutes: Continue watching Ninja Nerd videos
