--- a/personal-issues/1622.md
+++ b/personal-issues/1622.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-07-01
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,9 +8,20 @@ projects:
 milestone:	
 number:	1622
 --
+## Personal projects
+
+### SSL/TLS certificates
+
+- [x] ~8 minutes: Update SSL/TLS certificates and take care of followup actions
+
+### Wikipedia Views
+
+- [x] ~2 minutes: Update month for Wikipedia Views
+
 ## Personal finances, income and taxes
 
 - [x] ~2 minutes: Download a statement https://github.com/vipulnaik/personal-finances/commit/ddb6dedfe72e2aae3041d6e6985fddb36607ce4c
+- [x] ~18 minutes: Do end-of-June balances and some related stuff https://github.com/vipulnaik/personal-finances/commit/60784db1ae440d829beafc9a5dfd0a74f6b94ac2
 
 ## Personal chores
 
@@ -20,6 +31,8 @@ number:	1622
 - [x] ~20 minutes: Address an issue with the insinkerator and document best practices going forward
 - [x] ~15 minutes: Rinse out used-up condiment bottles and dish soap bottles for recycling
 - [x] ~5 minutes: Add checklist for changing a light bulb
+- [x] ~8 minutes: Add summaries for extended weekend + week + month https://github.com/vipulnaik/daily-updates/commit/8e1739e6dc2fb741aef06b46b2101287799d1ca8
+- [x] ~2 hours: Meal prep https://github.com/vipulnaik/diet-exercise-health/commit/6ddc7f4ecd3c8cc185d0a3c7098225f908e701ed
 
 ## House chores
 
